<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backker"
    tools:context=".puzzle.PuzzleSelectActivity">

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/categories"
        android:gravity="center"
        android:fontFamily="@font/amarante"
        android:textSize="25sp"
        android:textColor="#000000"
        />

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp">

        <Button
            android:layout_marginTop="20dp"
            android:onClick="selectLevels"
            android:id="@+id/mathfun"
            android:layout_marginBottom="10dp"
            android:text="@string/mathpuzzle"
            android:layout_width="match_parent"
            android:fontFamily="@font/amarante"
            android:layout_height="60dp"
            android:background="@drawable/round_white_back"/>
        <Button
            android:onClick="selectLevels"
            android:id="@+id/wordpuzzle"
            android:layout_marginBottom="10dp"
            android:text="@string/wordpuzz"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/amarante"
            android:background="@drawable/round_white_back"/>
        <Button
            android:onClick="selectLevels"
            android:id="@+id/connectme"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/amarante"
            android:text="@string/tiletap"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/round_white_back"/>
        <Button
            android:onClick="selectLevels"
            android:id="@+id/listmem"
            android:layout_marginBottom="20dp"
            android:text="@string/listmem"
            android:fontFamily="@font/amarante"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/round_white_back"/>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2780742672110526/6821820498">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>