<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:padding="5dp"
    android:layout_gravity="center"
    android:background="@drawable/rect_border"
    >


    <ImageView
        android:layout_margin="10dp"
        android:layout_alignParentRight="true"
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_action_close"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/rect_border"/>

    <TextView
        android:id="@+id/text"
        android:padding="5dp"
        android:fontFamily="@font/amarante"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/comments"
        android:textColor="#000000"
        android:gravity="center"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/comments"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:background="@drawable/rect_border"
        android:inputType="text|textMultiLine"
        android:hint="@string/writecomments"
        android:textSize="16dp"
        android:textColor="#000000"
        android:fontFamily="@font/amarante"
        android:lineSpacingExtra="10dp"
        android:padding="20dp"
        android:layout_above="@id/send"
        />
    <Button
        android:background="@drawable/green_round_back"
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/sendemail"
        android:fontFamily="@font/amarante"
        android:textColor="#000000"
        />
</RelativeLayout>