<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backker"
    tools:context=".puzzle.AnagramSelectActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:id="@+id/title"
        android:gravity="center">
    <TextView
        android:background="@drawable/yello_round_back"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/wordpuzz"
        android:gravity="center"
        android:fontFamily="@font/amarante"
        android:textSize="25sp"
        android:textColor="#000000"
        />
    </RelativeLayout>
    <ScrollView
        android:paddingBottom="30dp"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp">
        <LinearLayout

            android:paddingTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level1"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0.9"
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level2"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0.8"
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level3"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0.7"
                android:id="@+id/b4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level4"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0.6"
                android:id="@+id/b5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level5"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0.5"
                android:id="@+id/b6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level6"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0.4"
                android:id="@+id/b7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level7"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0.3"
                android:id="@+id/b8"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/level8"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0.2"
                android:id="@+id/b9"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="level 9"
                android:background="@drawable/round_white_back"/>
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0.1"
                android:id="@+id/b10"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="level 10"
                android:background="@drawable/round_white_back"
                />

            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:id="@+id/b11"
                android:alpha="0"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="Level 11"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b12"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="Level 12"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b13"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="level 13"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b14"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="level 14"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b15"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="level 15"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b16"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="Level 16"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b17"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="Level 17"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b18"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="level 18"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b19"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="level 19"
                android:background="@drawable/round_white_back"/>
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b20"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="level 20"
                android:background="@drawable/round_white_back"
                />

            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:id="@+id/b21"
                android:alpha="0"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="Level 21"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b22"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="Level 22"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b23"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="level 23"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b24"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="level 24"
                android:background="@drawable/round_white_back"
                />
            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b25"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="level 25"
                android:background="@drawable/round_white_back"
                />

            <Button
                android:fontFamily="@font/amarante"
                android:onClick="goToActivity"
                android:alpha="0"
                android:id="@+id/b26"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:text="Random Riddles"
                android:background="@drawable/round_white_back"
                />

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2780742672110526/6821820498">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>