<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backker"
    tools:context=".puzzle.ListMemActivity">
    <Button
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:id="@+id/start"
        android:background="@drawable/green_round_back"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:fontFamily="@font/amarante"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#000000"
        android:text="@string/start"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingLeft="18dp"
        android:fontFamily="@font/amarante"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#000000"
        android:text="@string/listmem"/>
    <TextView
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:id="@+id/totalcoinsHolder"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/round_white_back"
        android:textStyle="bold"
        android:fontFamily="@font/amarante"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="1000"/>
    <ImageView
        android:layout_marginLeft="5dp"
        android:layout_marginTop="80dp"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:src="@drawable/coins"
        />
    <TextView
        android:id="@+id/coins_view"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:fontFamily="@font/amarante"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="0"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@id/ab"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:fontFamily="@font/amarante"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/contain"/>


    <RelativeLayout
        android:id="@+id/ab"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/answer"
        android:gravity="center">
    <ImageView
        android:id="@+id/correct"
        android:visibility="gone"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_action_correct"
        android:background="#42000000"/>
        <ImageView
            android:id="@+id/wrong"
            android:visibility="gone"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_action_wrong"
            android:background="#42000000"/>

    </RelativeLayout>
    <TextView
        android:visibility="gone"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:id="@+id/answer"
        android:fontFamily="@font/amarante"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="kclclk"
        android:gravity="center"
        android:background="@drawable/round_white_back"
        />

    <LinearLayout
       android:visibility="gone"
        android:id="@+id/counter"
        android:layout_centerInParent="true"
        android:layout_above="@id/list"
        android:layout_width="240dp"
        android:layout_height="70dp"
        android:layout_marginBottom="30dp">
        <TextView
            android:id="@+id/counterView"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:textSize="22sp"
            android:fontFamily="@font/amarante"
            android:text="You have 5 seconds"
            />
    </LinearLayout>
    <RelativeLayout
       android:visibility="gone"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        >
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/round_white_back"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            >
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:fontFamily="@font/amarante"
                android:text="Memorize the list"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/one"
                    android:layout_width="150dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/tv11"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:fontFamily="@font/amarante"
                       />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/tv12"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:fontFamily="@font/amarante"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/tv13"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:fontFamily="@font/amarante"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/tv14"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:fontFamily="@font/amarante"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/tv15"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:fontFamily="@font/amarante"
                        />

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_toRightOf="@id/one"
                    android:id="@+id/two"
                    android:layout_width="150dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/tv21"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:fontFamily="@font/amarante"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/tv22"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:fontFamily="@font/amarante"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/tv23"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:fontFamily="@font/amarante"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/tv24"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:fontFamily="@font/amarante"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/tv25"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:fontFamily="@font/amarante"
                        />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_marginBottom="90dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        >
        <ImageView
            android:onClick="checkAnswer"
            android:id="@+id/img1"
            android:layout_marginLeft="30dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ic_action_correct"
            />

        <ImageView
            android:onClick="checkAnswer"
            android:id="@+id/img2"
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ic_action_wrong"
            />

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2780742672110526/6821820498">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>